<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity2"
    android:focusableInTouchMode="true"
    android:gravity="center"
    android:layout_gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_marginTop="50dp">
            <com.google.android.material.circularreveal.cardview.CircularRevealCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardBackgroundColor="@color/navi"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:boxBackgroundColor="@color/navi"
                        android:textColorHint="@color/white"
                        android:hint="@string/age">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/age"
                            android:textColorHint="@color/white"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:boxBackgroundColor="@color/navi"
                        android:textColorHint="@color/white"
                        android:hint="@string/height">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/height"
                            android:textColorHint="@color/white"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        app:boxBackgroundColor="@color/navi"
                        android:textColorHint="@color/white"
                        android:hint="@string/weight">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/weight"
                            android:textColorHint="@color/white"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/menu"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        app:boxBackgroundColor="@color/navi"
                        android:layout_margin="20dp"
                        android:backgroundTint="@color/white"
                        android:outlineAmbientShadowColor="@color/white"
                        android:hint="@string/label">

                        <AutoCompleteTextView
                            android:id="@+id/activation_rate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            />

                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/menu_gender"
                        android:layout_margin="20dp"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/white"
                        app:boxBackgroundColor="@color/navi"
                        android:hint="@string/gender">

                        <AutoCompleteTextView
                            android:id="@+id/gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"
                            android:textColor="@color/white"
                            android:textColorHint="@color/white"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

            <Button
                android:id="@+id/btn_register2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dip"
                android:background="@drawable/rounded_corner"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="20dp" />
        </LinearLayout>

    </ScrollView>
    <View
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="11dp"
        android:layout_height="match_parent"
        android:background="@drawable/ic_login_bag"/>

    <ImageView
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back_img"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="30dp"
        android:onClick="onLoginClick"
        android:adjustViewBounds="false"/>
</RelativeLayout>
